--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "duct",
+  "name": "@treshugart/duct",
   "version": "1.0.0",
   "description": "Simple, tiny test library inspired by tape.",
   "main": "index.js",
