--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "bugs": {
     "url": "https://github.com/treshugart/duct/issues"
   },
-  "homepage": "https://github.com/treshugart/duct#readme"
+  "homepage": "https://github.com/treshugart/duct#readme",
+  "version": "0.0.0"
 }
