chore: remove version for initial publication

--- a/package.json
+++ b/package.json
@@ -17,6 +17,5 @@
   "bugs": {
     "url": "https://github.com/treshugart/duct/issues"
   },
-  "homepage": "https://github.com/treshugart/duct#readme",
-  "version": "0.0.0"
+  "homepage": "https://github.com/treshugart/duct#readme"
 }
